🎨feat: 代码检查 - 消除坏味道